--- a/index.html
+++ b/index.html
@@ -37,3 +37,12 @@
     </script>
   </body>
 </html>
+function saveToGlide() {
+  var content = quill.root.innerHTML; // get styled text
+  fetch(https://hooks.glideapp.io/api/webhooks/abcd1234efgh5678ijkl, {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ Final_Text: content })
+  });
+  alert("Saved to Glide!");
+}
